Archive2/73/14848093d2987a/output
main.cpp:19:4: error: no matching function for call to 'bar'
   bar({1, 2});   // error: no matching function for call to 'bar'  <<< Why? <<<
   ^~~
main.cpp:9:6: note: candidate function not viable: requires 2 arguments, but 1 was provided
void bar(int x, int y) { std::cout << "bar(int = " << x << ", int = " << y << ")" << std::endl; }
     ^
1 error generated.
